# laval-digital

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.py  client_factory.py  docker-compose.yml  entrypoint.sh  laval-digital.service  nginx-laval-digital.conf  pyproject.toml  requirements.txt  start.sh
agents/: __init__.py  backlinks_agent.py  content_strategy_agent.py  cro_agent.py  email_marketing_agent.py  executioner_agent.py  growth_hacker_agent.py  lead_conversion_agent.py  local_seo_agent.py  outreach_agent.py  paid_ads_agent.py  reporting_agent.py  reputation_agent.py  sms_marketing_agent.py  social_media_agent.py  technical_seo_agent.py  tiktok_agent.py  video_agent.py
blueprints/: __init__.py  _shared.py  actions_bp.py  admin_bp.py  ads_bp.py  affiliate_bp.py  agents_bp.py  analytics_bp.py  client_bp.py  executioner_bp.py  main_bp.py  managed_bp.py  mcp_bp.py  orchestrator_bp.py  public_bp.py  schedules_bp.py  shopify_bp.py  speech_bp.py  training_bp.py  users_bp.py
config/: client_config.json  niches.json  sample_agent.json  templates.json
core/: ads_auth.py  affiliates.py  analytics.py  api_helpers.py  app_state.py  auth.py  base_agent.py  blog_articles.py  database.py  database_orm.py  email_bridge.py  events.py  llm_adapter.py  location_injector.py  memory.py  models.py  monitor.py  orchestrator.py  pipeline.py  push.py  rate_limiter.py  resellers.py  scheduler.py  settings.py  shopify_auth.py  speech.py  tenant_manager.py  training_articles.py
data/: vapid_keys.json
mcp/: __init__.py  config.json  (+10 more)
(+98 files in other folders)
